made page template for canon items

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -422,6 +422,10 @@ nav {
   padding-bottom: 134px;
 }
 
+.sourcing {
+  font-size: 90%;
+}
+
 .wrapper-footer {
   position: absolute;
   bottom: 0;
