--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
             <nav>
               <a href="{{ site.baseurl }}/">Home</a>
-              <a href="{{ site.baseurl }}/placeholder">Placeholder</a>
+              <a href="{{ site.baseurl }}/about">About</a>
               <!--<a href="{{ site.baseurl }}/search">Search</a>-->
             </nav>
           </header>
