--- a/_layouts/canon.html
+++ b/_layouts/canon.html
@@ -14,9 +14,9 @@ layout: default
     <hr>
     <i>tags:</i> {% for tag in page.tags %}{{tag}}{% unless forloop.last %}, {% endunless %}{% endfor %}<br/>
     <i>posted:</i>
-    {{ page.creation_date | date: "%B %e, %Y" }}<br/>
+    {{ page.creation_date | date: "%B %e, %Y %H:%M:%S %Z" }} UTC<br/>
     <i>last updated:</i>
-    {{ page.last_updated | date: "%B %e, %Y" }}<br/>
+    {{ page.last_updated | date: "%B %e, %Y %H:%M:%S %Z" }} UTC<br/>
     <i>source threads:</i>
     {% for source in page.sources %}
     <a href="https://twitter.com/selflathing/status/{{ source }}">{{ source }}</a>
