--- a/_layouts/explorer.html
+++ b/_layouts/explorer.html
@@ -2,9 +2,11 @@
 layout: default
 ---
 
+{% assign cacheBust = site.time | date:'?v=%s' %}
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/luxon@3.5.0/build/global/luxon.min.js" integrity="sha256-/TZdvWBQbZdgT95AgMF6nDLyjhe3QdOMpw4VLnkcgq4=" crossorigin="anonymous"></script>
-<script src="{{ site.baseurl }}/js/explorer.js"></script>
+<script src="{{ site.baseurl }}/js/explorer.js{{ cacheBust }}"></script>
 <link href="https://unpkg.com/tabulator-tables@5.5.0/dist/css/tabulator.min.css" rel="stylesheet">
 <script type="text/javascript" src="https://unpkg.com/tabulator-tables@5.5.0/dist/js/tabulator.min.js"></script>
 
