--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -7,7 +7,7 @@
 {% elsif page.description %}
 <meta property="og:description" content="{{ page.description }}" />
 {% else %}
-<meta property="og:description" content="{{ site.description }}" />
+<meta property="og:description" content="{{ site.strapline }}" />
 {% endif %}
 <meta name="author" content="{{ site.name }}" />
 
