hide shitposts button

--- a/_layouts/explorer.html
+++ b/_layouts/explorer.html
@@ -21,6 +21,9 @@ layout: default
 
 <input type="checkbox" id="show-drafts" name="show-drafts">
 <label for="show-drafts">show drafts 📝</label>
+&emsp;
+<input type="checkbox" id="hide-shitposts" name="hide-shitposts">
+<label for="hide-shitposts">hide shitposts</label>
 <div id="data-table"></div>
 
 </article>
